<resources>
    <string name="app_name">GatherHall</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="continue_">Continue</string>
    <string name="english">English</string>
    <string name="hello">Hello!</string>
    <string name="choose_your_display_language">Choose Your\nDisplay Language</string>
    <string name="mobile_number_email_id">Mobile Number / Email id</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="btncustom">btnCustom</string>
    <string name="customedittext">customEditText</string>
    <string name="edittext">EditText</string>
    <string name="scrollViewRegister">scrollViewRegister</string>
    <string name="registerScrollview">RegisterScrollView</string>
    <string name="mobile">Mobile</string>
    <string name="userPhoneNo">UserPhoneNo</string>
    <string name="terms">Terms</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">LogIn</string>
    <string name="txt_forgot_password_label">Please enter your email address or mobile number. You will receive an OTP to reset your password.</string>
    <string name="txt_otp_verification_label">OTP has been sent to your Mobile number</string>
    <string name="txt_phone_no">(581) - 307-6902</string>
    <string name="txt_label_password">Please enter new password.</string>
    <string name="txt_new_password_label">Please enter new password.</string>
    <string name="terms_and_condition">End User License Agreement</string>
    <string name="txt_user_agree">I have read and agree to the End User License Agreement</string>
</resources>